feat: update endpoint and docs swagger
